force-app/main/default/objects/Opportunity/fields/Passed_Final_Quality_Check__c.field-meta.xml
<CustomField>
    <fullName>Passed_Final_Quality_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passed Final Quality Check?</label>
    <type>Checkbox</type>
</CustomField>