force-app/main/default/objects/Opportunity/fields/PaymentDetailsCompleted__c.field-meta.xml
<CustomField>
    <fullName>PaymentDetailsCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Details Completed?</label>
    <type>Checkbox</type>
</CustomField>