force-app/main/default/objects/Opportunity/fields/PhotoDune_Incentivised__c.field-meta.xml
<CustomField>
    <fullName>PhotoDune_Incentivised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PhotoDune Incentivised</label>
    <type>Checkbox</type>
</CustomField>