force-app/main/default/objects/Opportunity/fields/Primary_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Item_Type__c</fullName>
    <label>Primary Item Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>