force-app/main/default/objects/Opportunity/fields/Special_Rate__c.field-meta.xml
<CustomField>
    <fullName>Special_Rate__c</fullName>
    <label>Special Rate</label>
    <type>TextArea</type>
</CustomField>