force-app/main/default/objects/Opportunity/fields/Tax_Form_Completed__c.field-meta.xml
<CustomField>
    <fullName>Tax_Form_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Form Completed?</label>
    <type>Checkbox</type>
</CustomField>