force-app/main/default/objects/Opportunity/recordTypes/Author.recordType-meta.xml
<RecordType>
    <fullName>Author</fullName>
    <active>true</active>
    <businessProcess>Elements Recruitment Process</businessProcess>
    <description>The record type for prospective authors on Elements (but existing on Market already).</description>
    <label>Author</label>
</RecordType>