force-app/main/default/objects/Opportunity/recordTypes/Font_Author.recordType-meta.xml
<RecordType>
    <fullName>Font_Author</fullName>
    <active>true</active>
    <businessProcess>Fonts Chase</businessProcess>
    <label>Font Author</label>
</RecordType>