force-app/main/default/objects/Opportunity/validationRules/Closed_Won_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won_Check</fullName>
    <active>true</active>
    <description>Rule preventing opportunity closing without all 3 boxes ticked</description>
    <errorConditionFormula>ISPICKVAL(StageName, "Closed Won") &amp;&amp; ( not(Agreed_to_Terms_Conditions__c) || not(Tax_Form_Completed__c) || 
not( Passed_Final_Quality_Check__c ) 
)</errorConditionFormula>
    <errorMessage>Please ensure author has passed final check and tick field on opportunity record</errorMessage>
</ValidationRule>